src/index.css
:root {
    --main__green: #afc6ae;
    --fluo__green: #00FF67;
    --happy__bold: "happy-times-NG_bold_master_web";
    --happy__regular: "happy-times-NG_regular_master_web";
    --happy__italic: "happy-times-NG_italic_master_web";
}

.inline-block{
    display: inline-block;
}

::selection {
    background: var(--main__green)
}

html, body {
    position:fixed;
    top:0;
    bottom:0;
    left:0;
    right:0;
    text-rendering: optimizeLegibility;
    cursor: cell;
    height: 200vh;
    background: linear-gradient(180deg, #ffffff 0%,  #fbf2e7 85%);

}

div {
    font-family: "happy-times-NG_bold_master_web", sans-serif;
    font-size: 12px;
}

.centerBox{
    display: flex;
    justify-content: center;
}

/* ---------------------------------- FONTS & TYPE ---------------------------------- */

@font-face {
    font-family: "happy-times-NG_bold_master_web";
    src: local("happy-times-NG_bold_master_web"), url(fonts/happy-times-NG_bold_master_web.ttf);
}

@font-face {
    font-family: "happy-times-NG_italic_master_web";
    src: local("happy-times-NG_italic_master_web"), url(fonts/happy-times-NG_italic_master_web.ttf);
}

@font-face {
    font-family: "happy-times-NG_regular_master_web";
    src: local("happy-times-NG_regular_master_web"), url(fonts/happy-times-NG_regular_master_web.ttf);
}

@font-face {
    font-family: "lineal";
    src: local("lineal"), url(fonts/Lineal.otf);
}

h1 {
    font-size: 43px;
    font-family: "happy-times-NG_bold_master_web", sans-serif;
}

h2 {
    font-size: 17px;
    font-family: "happy-times-NG_italic_master_web", sans-serif;
}

h4 {
    font-family: "happy-times-NG_italic_master_web", sans-serif;
}

a {
    color: var(--main__green);
    cursor: crosshair;
}

.main-title{
    font-family: "happy-times-NG_bold_master_web", sans-serif;
    font-size: 100px;
    padding-top: 20vh;
    height: 50vh;
    bottom: 40vh;
}

.underlined{
    text-decoration: underline;
}

.refText{
    text-decoration: underline;
    transition: color 300ms;
    color: var(--fluo__green)
}

.refText:hover {
    transform: rotate(45deg);
    transition: color 2s ease-out;
    color: var(--fluo__green)
}

.refText:focus {
    transform: rotate(45deg);
    transition: color 2s ease-out;
    color: var(--fluo__green)
}

.hoverLinkEffect{
    transition: color 150ms ease-out;
}

.rotateText{
    transform: rotate(90deg);
    position: relative;
    top: 10%;
    text-decoration: underline;
    font-size: 20px;
}

.rotateText:hover{
    transition: color 2s ease-out;
    color: var(--fluo__green)
}

.model-TextColumns__3 {
    display: grid;
    grid-template-columns: repeat(3, 30%);
}

.boldSet {
    font-family: "happy-times-NG_bold_master_web", sans-serif;
}

.italic {
    -moz-transition: all 1s;
    -webkit-transition: all 1s;
    -o-transition: all 1s;
    transition: all 1s;
}

.italic:hover {
    -webkit-transform: skewX(-10deg);
    -moz-transform: skewX(-10deg);
    -o-transform: skewX(-10deg);
    transform: skewX(-10deg);
    transition: color 2s ease-out;
    color: var(--fluo__green)
}

.italicSet{
    font-family: "happy-times-NG_italic_master_web", sans-serif;
}

.pinkHeader {
    color: var(--main__green);
    line-height: 1px;
}

.line-heighter {
    line-height: 20px;
}

/* ---------------------------------- COLORS ---------------------------------- */

.background__cool-to-warm-spectrum {
    background: linear-gradient(135deg,white 0%,white 75%,papayawhip 100%);
}

/* ---------------------------------- LAYOUT ---------------------------------- */

.sideBarLeft-Nav{
    display: grid;
    width: 40px;
    
}

.sideBarLeft-Nav__button{
    color: var(--main__green);
}

.sideBarLeft-Nav__button:hover{
    transition-duration: 1.5s;
    color: var(--fluo__green);
    background-color: white;
    border: 3px solid var(--fluo__green);
}

.emptyFrameModel__1 {
    position:relative;
    width: 400px;
    height: 100%;
    left: 30vw;
    border: 3px solid #afc6ae;
}


.model1_header{
    display:grid;
    grid-template-columns: 68.5vw 31.5vw;
}


.box{
    position: relative;
    width: 400px;
}

.center{
    text-align: center;
}

.left {
    text-align: left;
}

.right {
    text-align: right;
}

.modal {
    border-left: dotted black;
}

.title-box{
    margin-top: 4px;
    height: 6vh;
}

.title-box__top{
    display:grid;
    grid-template-columns: auto;
}

.title-box__title {
    font-size: 20px;
    text-align: left;
    margin-bottom: 20px;
}

.title-box__title:hover{
    transition-duration: 1.5s;
    transition: color 2s ease-out;
    color: var(--fluo__green)
}

.glossText{
    transform: rotate(90deg);
}

.colorText{
    font-family: "happy-times-NG_italic_master_web", sans-serif;
    font-size: 15px;
}

.easeBorder__green{
    border: 2px solid #afc6ae;
}

.descText {
    font-family: "happy-times-NG_regular_master_web", sans-serif;
    font-size: 15px;
}

.modelTitle{
    text-align: center;
}

text {
    position: relative;
}

button{
    font-family: "happy-times-NG_italic_master_web", sans-serif;
    width: 100%;
    background-color: #afc6ae;
    margin-bottom: 10px;
}

.buttonRandomizer {
    position: absolute;
    left: 90vw;
    right: 95vw;
    top: 5vw;
    width: 7vw;
    font-size: 15px;
    font-family: "happy-times-NG_bold_master_web", sans-serif;
}

.overlay {
    right:0;
    left:0;
    bottom:0;
    top:0;
}

.dotLine {
    border: dotted 4px black;
    margin-right: 10px;
}

/* ANIMATIONSSS */

.headerContainer{
    display: grid;
    grid-template-columns: 95% 5%
}

.languages_button_box{
    display: grid;
    grid-template-rows:repeat(2, 50%);
}

.button-lang{
    border: 2px solid black;
    border-left: none;
    text-align: center;
    color: #afc6ae;
    font-size: 20px;
}

.rowScroll {
    border: 4px none #afc6ae;
    height: 300px;
    overflow-y:auto;
    margin-top: 20px;
}

.rowScrollMain{
    height: 100vh;
    overflow-y:auto;
    overflow-x:hidden;
}

.scroll-container {
    -moz-box-pack: center;
    border: 3px solid black;
    overflow: hidden;
    display: flex;
    justify-content: space-evenly;
}

.scroll-container__blue__pink{
    -moz-box-pack: center;
    background-color: blue;
    border-right: 3px solid black;
    border-left: 3px solid black;
    overflow: hidden;
    display: flex;
    justify-content: space-evenly;
    color: #afc6ae;
}


.scroll-text {
    text-align: right;
    white-space: nowrap;
    text-transform: uppercase;
    text-rendering: optimizeLegibility;

    line-height: 0;

    /*animation props*/
    -moz-transform: translateX(-100%);
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%);

    -moz-animation: my-animation 35s linear infinite;
    -webkit-animation: my-animation 35s linear infinite;
    animation: my-animation 35s linear infinite;
}

/* FIREFOXY */

@-moz-keyframes my-animation {
    from { -moz-transform: translateX(100%); }
    to { -moz-transform: translateX(-100%);}
}

/* CHROMIE */
@-webkit-keyframes my-animation {
    from { -webkit-transform: translateX(100%); }
    to { -webkit-transform: translateX(-100%); }
}

@keyframes my-animation {
from {
    -moz-transform: translateX(100%);
    -webkit-transform: translateX(100%);
    transform: translateX(-00%);
}
to {
    -moz-transform: translateX(-100%);
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%);
}
}


#left, #right {
    border: 1px solid #aaa;
    float:left;
    height: 100vh;
    width: 48%;
}

#handle {
    background:#000;
    float: left;
    height: 100px;
    width: 1%;
    margin: 1px;
}

.container {
    display:grid;
    width: 70vw;
    margin-top: 5px;
    grid-template-columns: repeat(3, 18vw);
    grid-template-rows: repeat(1, auto);
    column-gap: 10px;
    row-gap: 0;
}

.superContainer{
    display: flex;
}

.mainContainer{
    display:grid;
    height: 100%;
    grid-template-columns: 19.5% 0.5% 79.5% 0.5%;
    border-right: dashed black 4px;
}

.mainContainerAlt{
    display:grid;
    height: 100%;
    grid-template-columns: 0.5% 98.5% 0.5%;
    border-right: dashed black 4px;
}

.infoBoxLeft{
    border: 4px dashed black;
    margin-right: 3px;
    margin-left: 70px;
    padding-right: 20px;
    padding-left: 20px;
    padding-bottom: 200px;
    width: 25%;
    height: 90vh;
    border-bottom: none;
    border-top: none;
    overflow-y:auto;
}

.imageHex {
    height: 10vh;
    width: 25%;
    border: 4px solid palevioletred;
}

img{
    width: 18vw;
    height: 30vh;
    object-fit: contain;
}

.__img{
    border: none;
}

.__img:hover{
    transition-duration: 0.5s;
    border: dotted 1px #00FF67;
}

.imageViewer__modal{
    position: absolute;
    background: linear-gradient(180deg, var(--main__green) 0%,  var(--fluo__green) 100%);

    display: grid;
    grid-template-columns: 10% 80% 10%;

    top: 10vh;
    bottom: 120vh;
    left: 20vw;
    right: 20vw;

    z-index: 100000;
}

.imageViewer__modal__title{
    display: inline-block;
    overflow: hidden;
}

.imageViewer__modal__title-inner{
    display: inline-block;
    white-space: nowrap;

    transform: translate(0, 100%) rotate(90deg);
    transform-origin: 0 40px;
}

.imageViewer__modal__title-inner:after {
    content: "";
    float: left;
    margin-top: 100%;
}

.img__large{
    width:100%;
    height: 100%;
    object-fit: contain;
    opacity: 1;
}

.hexBox{
    width: 20vw;
    height: 5vw;
}

.hexCube{
    padding-bottom: 4px;
    padding-top: 4px;
    display: grid;
    grid-template-columns: repeat(5, 20%);
    grid-template-rows: repeat(2, 10vh);
}

.hexCube__single {
    margin: 2px;
}

.hexCubeNames{
    display: grid;
    font-size: 10px;
    grid-template-columns: repeat(4, 18%);
    grid-template-rows: repeat(2, 2vh);
}

.accordion-container{
    height: 100vh;
}

.accordion-container__imgFrame{
    height: 100vh;
    width: 60vw;
}

.accordion-container-left{
    width: 20vw;
}

.colorPickInterface{
    display:grid;
    grid-template-columns: 80% 18%;
    height: 10vh;
    border: solid black 3px;
}

.colorPickerInterfaceLuckyButton{
    border: solid #0066FF 3px;
    background-color: white;
    height: 100%;
    text-align: center;
    font-family: "happy-times-NG_bold_master_web", sans-serif;
    font-size: 20px;
}

.colorPickerInterfaceList{
    display:grid;
    grid-template-columns: repeat(10, 10%);
}

.colorPickerInterfaceColorSQ{
    border: solid #0066FF 3px;
    text-align: center;
}

.textBackground__green{
    color: #afc6ae;
}

.fluoGreen {
    color: var(--fluo__green);
}

